TESTS = test_f2p test_f2p_exeuclid test_minpoly

noinst_PROGRAMS = test_f2p test_f2p_exeuclid test_minpoly

test_f2p_SOURCES = test_f2p.c f2p-gmp.c
test_f2p_exeuclid_SOURCES = test_f2p_exeuclid.c f2p-gmp.c
test_minpoly_SOURCES = test_minpoly.c f2p-gmp.c tinymt32.c

AM_CFLAGS = -std=c99 -Wall -Wextra #-DDEBUG
